design start page in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Car Rental System</title>
+    <meta content="width=device-width initial-scale=1" name="viewport">
+    <link href="assests/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assests/style.css" rel="stylesheet">
+
+    <!-----------------------------fonts-------------------------------------->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Convergence&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+    <!------------------------------------------------------------------->
+
+    <style>
+        #startImage{
+            background: url("assests/images/startBG.jpg");
+            background-size: cover;
+            background-position: center;
+        }
+
+    </style>
 </head>
 <body>
 
+<main class="container-fluid">
+    <section class="row" id="startImage" style="height: 729px">
+        <div class="col-5 mt-3">
+            <div class="row mt-5 ms-3 me-3" style="height: 590px;color:white ; border-radius: 15px;background-color:rgba(0,0,0,0.34) ">
+                <div class="col-12 text-center" style="height: 145px">
+                    <label class="col-12 mt-3 fs-1" style="height: max-content;font-family: 'Convergence', sans-serif;"> Welcome</label>
+                    <label class="col-12 mt-3 fs-2" style="height: max-content;font-family: 'Convergence', sans-serif;">To Our Side of the World</label>
+                </div>
+                <div class="col-12 text-center fs-5" style="height: 340px">
+                    <p class="mt-1">Easy car rental private limited is a car rental service with 5 years of history. This company has about
+                        50 cars and 40 drivers working for them in regular shifts. This company is located at No. 200, Galle
+                        Road, Panadura, and well known for their services. Usually, people who don’t own a car, people who
+                        are waiting for their car to be repaired and, travelers or tourists seek their services.
+                    </p>
+                    <label class="col-12 mt-3 fs-4" style="height: max-content;font-family: 'Convergence', sans-serif;"> Thank You !</label>
+                    <label class="col-12 mt-3 fs-4" style="height: max-content;font-family: 'Convergence', sans-serif;"> Enjoy Your Moment And Cars</label>
+                </div>
+                <div class="col-12" style="height: 60px">
+                    <div class="row justify-content-center">
+                        <button class="btn fs-5 col-4 mt-2 btn-dark" type="button"><a href="pages/logIn.html" style="text-decoration: none;color:white;">Get Start</a></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+
+<script src="assests/js/bootstrap.min.js"></script>
+<script src="assests/JQuery/jquery-3.6.1.min.js"></script>
 </body>
 </html>
