--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/signUp.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/signUp.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="col-md-6">
                             <label for="formFileMultipleDL" class="form-label">Image Of Driving License</label>
-                            <input class="form-control" type="file" id="formFileMultipleDL" multiple>
+                            <input class="form-control" type="file" id="formFileMultipleDL">
                         </div>
                         <div class="col-md-6">
                             <label for="inputUsername" class="form-label">Username</label>
