--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
@@ -26,16 +26,59 @@
             background: url("assests/images/startBG.jpg");
             background-size: cover;
             background-position: center;
+            animation-name:start-image ;
+            animation-duration: 1.5s;
+            animation-iteration-count: inherit;
+            animation-timing-function: cubic-bezier(0.43, 0, 0.24, 1.07);
+        }
+
+        @keyframes start-image {
+            0%{
+                opacity: 0;
+            }
+            100%{
+                opacity: 1;
+            }
+        }
+
+        #detailsDiv{
+            animation-name:detais-box ;
+            animation-duration: 5s;
+            animation-iteration-count: inherit;
+            animation-timing-function: cubic-bezier(0.43, 0, 0.24, 1.07);
+        }
+
+        @keyframes detais-box {
+            0%{
+                opacity: 0;
+            }
+            25%{
+                opacity: 0;
+            }
+            50%{
+                opacity: 1;
+            }
+            75%{
+                opacity: 1;
+            }
+            100%{
+                opacity: 1;
+            }
+        }
+
+        #btnGetStart:hover a{
+            font-weight: bold;
         }
 
     </style>
+
 </head>
 <body>
 
-<main class="container-fluid">
+<main class="container-fluid bg-black">
     <section class="row" id="startImage" style="height: 729px">
         <div class="col-5 mt-3">
-            <div class="row mt-5 ms-3 me-3" style="height: 590px;color:white ; border-radius: 15px;background-color:rgba(0,0,0,0.34) ">
+            <div class="row mt-5 ms-3 me-3" id="detailsDiv" style="height: 590px;color:white ; border-radius: 15px;background-color:rgba(0,0,0,0.34) ">
                 <div class="col-12 text-center" style="height: 145px">
                     <label class="col-12 mt-3 fs-1" style="height: max-content;font-family: 'Convergence', sans-serif;"> Welcome</label>
                     <label class="col-12 mt-3 fs-2" style="height: max-content;font-family: 'Convergence', sans-serif;">To Our Side of the World</label>
@@ -51,7 +94,7 @@
                 </div>
                 <div class="col-12" style="height: 60px">
                     <div class="row justify-content-center">
-                        <button class="btn fs-5 col-4 mt-2 btn-dark" type="button"><a href="pages/logIn.html" style="text-decoration: none;color:white;">Get Start</a></button>
+                        <button id="btnGetStart" class="btn fs-5 col-4 mt-2 btn-dark" type="button"><a href="pages/logIn.html" style="text-decoration: none;color:white;">Get Start</a></button>
                     </div>
                 </div>
             </div>
