add lorder to start page(index.html page) in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -367,10 +367,6 @@
                                     <th scope="col">TransmissionType</th>
                                     <th scope="col">FuelType</th>
                                     <th scope="col">NoOfPassengers</th>
-                                    <th scope="col">FrontImage</th>
-                                    <th scope="col">SideImage</th>
-                                    <th scope="col">BackImage</th>
-                                    <th scope="col">InteriorImage</th>
                                     <th scope="col">DailyRate</th>
                                     <th scope="col">MonthlyRate</th>
                                     <th scope="col">FreeKmForADay</th>
@@ -468,9 +464,7 @@
                                     <th scope="col">ContactNo</th>
                                     <th scope="col">Email</th>
                                     <th scope="col">NIC</th>
-                                    <th scope="col">ImageOfNIC</th>
                                     <th scope="col">DrivingLicense</th>
-                                    <th scope="col">ImageOfDrivingLicense</th>
                                 </tr>
                                 </thead>
                                 <tbody></tbody>
@@ -561,15 +555,13 @@
                             <table class="table table-secondary mt-3">
                                 <thead class="table-dark">
                                 <tr>
-                                    <th scope="col">UserID</th>
+                                    <th scope="col">DriverID</th>
                                     <th scope="col">Name</th>
                                     <th scope="col">Address</th>
                                     <th scope="col">ContactNo</th>
-                                    <th scope="col">Email</th>
                                     <th scope="col">NIC</th>
-                                    <th scope="col">ImageOfNIC</th>
                                     <th scope="col">DrivingLicense</th>
-                                    <th scope="col">ImageOfDrivingLicense</th>
+                                    <th scope="col">Availability</th>
                                 </tr>
                                 </thead>
                                 <tbody></tbody>
