--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/index.html
@@ -22,6 +22,86 @@
     <!------------------------------------------------------------------->
 
     <style>
+        #loaderPage{
+            background-color: #f4e2e1;
+            position: fixed;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            z-index: 1;
+        }
+
+        .loader {
+            width: 70px;
+            height: 70px;
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+        }
+
+        .loader:before {
+            content: '';
+            width: 70px;
+            height: 5px;
+            background: #f0808050;
+            position: absolute;
+            top: 85px;
+            left: 0;
+            border-radius: 50%;
+            animation: shadow324 0.5s linear infinite;
+        }
+
+        .loader:after {
+            content: '';
+            width: 100%;
+            height: 100%;
+            background: #f08080;
+            position: absolute;
+            top: 0;
+            left: 0;
+            border-radius: 4px;
+            animation: jump7456 0.5s linear infinite;
+        }
+
+        @keyframes jump7456 {
+            15% {
+                border-bottom-right-radius: 3px;
+            }
+
+            25% {
+                transform: translateY(9px) rotate(22.5deg);
+            }
+
+            50% {
+                transform: translateY(18px) scale(1, .9) rotate(45deg);
+                border-bottom-right-radius: 40px;
+            }
+
+            75% {
+                transform: translateY(9px) rotate(67.5deg);
+            }
+
+            100% {
+                transform: translateY(0) rotate(90deg);
+            }
+        }
+
+        @keyframes shadow324 {
+
+            0%,
+            100% {
+                transform: scale(1, 1);
+            }
+
+            50% {
+                transform: scale(1.2, 1);
+            }
+        }
+
         #startImage{
             background: url("assests/images/startBG.jpg");
             background-size: cover;
@@ -75,7 +155,11 @@
 </head>
 <body>
 
-<main class="container-fluid bg-black">
+<div id="loaderPage">
+    <div class="loader"></div>
+</div>
+
+<main class="container-fluid">
     <section class="row" id="startImage" style="height: 729px">
         <div class="col-5 mt-3">
             <div class="row mt-5 ms-3 me-3" id="detailsDiv" style="height: 590px;color:white ; border-radius: 15px;background-color:rgba(0,0,0,0.34) ">
@@ -104,5 +188,10 @@
 
 <script src="assests/js/bootstrap.min.js"></script>
 <script src="assests/JQuery/jquery-3.6.1.min.js"></script>
+<script>
+    $(window).on('load',function (){
+        $("#loaderPage").fadeOut(1000);
+    });
+</script>
 </body>
 </html>
